Migrate from JDK 8 -> 11 and use Gradle instead of Maven